profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_1/run_4_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci_cache, input size: 20
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 20; module.fibonacci_cache(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.055221649169923 for 0.22898012 sec of execution.
